Fixed Shapes dimenssions and cropping

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -83,6 +83,7 @@
     @include breakpoint('lg') {
       @include col(7, 5);
 
+      aspect-ratio: 1;
       border-radius: 2.4rem;
       grid-row: 1;
       opacity: 0;
@@ -139,6 +140,8 @@
 
   &__cta-container {
     @include grid;
+
+    margin-bottom: 4rem;
   }
 
   &__cta-sub-container {
@@ -205,18 +208,18 @@
   }
 
   .shape2 {
-    height: 64.6133rem;
+    height: 76.613rem;
     opacity: 1;
-    right: -40rem;
-    top: 5rem;
-    transform: rotate(168.55deg);
+    right: -35rem;
+    top: -3rem;
+    transform: rotate(167.55deg);
     width: 65.478rem;
   }
 
   .shape3 {
-    height: 59.064rem;
+    height: 93.064rem;
     left: -45rem;
-    top: 27rem;
+    top: 12rem;
     transform: rotate(-100.29deg);
     width: 53.343rem;
   }
@@ -230,17 +233,17 @@
   }
 
   .shape5 {
-    height: 64.926rem;
+    height: 80.926rem;
     left: -50rem;
-    top: 3rem;
+    top: -5rem;
     transform: rotate(-71.15deg);
     width: 61.04rem;
   }
 
   .shape6 {
-    height: 50.802rem;
-    right: -36rem;
-    top: 30rem;
+    height: 65.802rem;
+    right: -33rem;
+    top: 33rem;
     transform: rotate(121.85deg);
     width: 47.762rem;
   }
